Bug 739 - Mac css for .menulist-editable-box is set to "center" while on linux and windows it's set to "stretch"
git-svn-id: http://publicsvn.songbirdnest.com/client/trunk@1885 5aad4ff5-4b58-4159-ba3f-0e6328df4cad

--- a/feathers/rubberducky/content/css/dialog.css
+++ b/feathers/rubberducky/content/css/dialog.css
@@ -609,6 +609,7 @@ menulist[disabled="true"] > dropmarker
   border: none !important;
   padding: 0px 0px 0px 0px !important;
   margin: 0px 0px 0px 0px !important;
+  -moz-box-align: stretch !important; /* this is set to "center" on the mac.  yay. */
 }
 
 /** 
